[package]
name = "jbcrs"
version = "0.1.0"
authors = ["orasunis"]

description = "A Library to support reading and writing of java class files."
readme = "README.md"
keywords = ["java", "class", "jvm", "bytecode"]
categories = ["parser-implementations"]
license = "MIT"

include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-MIT"]

[dependencies]
bitflags = "1.0.1"
byteorder = "1.2.1"
yade = "0.1.2"
