[package]
name = "jbcrs"
version = "0.1.4"
authors = ["orasunis"]

repository = "https://github.com/orasunis/jbcrs"
documentation = "https://docs.rs/jbcrs"

description = "A Library to support reading and writing of java class files."
readme = "README.md"
keywords = ["java", "class", "jvm", "bytecode"]
categories = ["parser-implementations"]
license = "Unlicense"

include = ["Cargo.toml", "src/**/*.rs", "README.md", "UNLICENSE"]

[dependencies]
jbcrs-basic = { path = "basic" }
yade = "0.1.2"
